# 14_ValorisationDonneeMeteo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  Audit.md  README.md  SystemAuditJeremy.md  audit.txt  conflictresolution.md  doc_rendu.md  docker-compose.dev.yml  docker-compose.dhi.yml  docker-compose.monitoring.yml  docker-compose.yml  exercice1.md  exercice2.md  exercice3.md  sonar-project.properties  trivy.yaml  vex.json
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dhi  README.md  entrypoint.sh  pyproject.toml
backend/config/: settings.py  urls.py
backend/db_data/: station.sql
backend/dev_scripts/: apply_views.sh  create_extra_tables.sh  seed_completeness_mv.sh  seed_dev.sh  seed_itn_absolute_extremes.sh  seed_itn_baseline.sh  seed_itn_baseline_monthly.sh  seed_itn_baseline_yearly.sh  seed_itn_daily_observed.sh  seed_records_mv.sh  seed_station_baseline.sh  seed_v_quotidienne.sh
backend/notebooks/: national_indicator_sandbox.ipynb
backend/openapi/target-specs/: openapi.yaml
backend/scripts/: apply_materialized_views.sh  seed_dev.sh
backend/sql/: DB.puml  create_views_and_mv.sql
backend/sql/cron/: 001_cron_refresh_realtime_mvs.sql  001_mv_quotidienne_realtime.sql
backend/sql/materialized_views/: 100_002_mv_first_temperature_date.sql  100_002_v_first_temperature_date.sql  101_002_mv_first_temperature_date.sql  300_001_mv_quotidienne_realtime.sql  300_001_v_quotidienne_realtime.sql  301_001_mv_quotidienne_realtime.sql  320_003_mv_mensuelle_realtime.sql  320_003_v_mensuelle_realtime.sql  321_003_mv_mensuelle_realtime.sql  520_mv_baseline_station_daily_mean_1991_2020.sql  520_v_baseline_station_daily_mean_1991_2020.sql  521_mv_baseline_station_daily_mean_1991_2020.sql  baseline-indicateur-thermique-national-9120.sql  baseline-station-daily-mean-9120.sql
backend/sql/schemas/: 001_source_tables.sql
backend/sql/tables/: 001_table_ref_department_region.sql
backend/timescaledb-env/: FILES.txt  QUICKSTART.md  README.md  STRUCTURE.md  docker-compose.yml  populate_from_parquet.py  pyproject.toml  real-data-doc.md  real_data_2025.parquet  test-environment.sh
backend/weather/: FIELDS_DOCUMENTATION.md  admin.py  bootstrap_itn.py  bootstrap_records.py  bootstrap_records_graph.py  bootstrap_temperature_absolute_records.py  bootstrap_temperature_absolute_records_graph.py  bootstrap_temperature_deviation.py  bootstrap_temperature_extremes.py  bootstrap_temperature_minmax.py  bootstrap_temperature_records.py  cache_control.py  calcul_itn.py  calcul_normale_itn.py  filters.py  metrics.py  models.py  regions.py  serializers.py  urls.py  views.py
backend/weather/itn/: gateway.py  (+3 more)
(+516 files in other folders)
